openmetadata-docs/content/v1.1.0/main-concepts/metadata-standard/schemas/entity/automations/testServiceConnection.md
---
title: testServiceConnection
slug: /main-concepts/metadata-standard/schemas/entity/automations/testserviceconnection
---

# TestServiceConnectionRequest

*Test Service Connection to test user provided configuration is valid or not.*

## Properties

- **`connection`**: Connection object.
  - **One of**
    - : Refer to *[../services/databaseService.json#/definitions/databaseConnection](#/services/databaseService.json#/definitions/databaseConnection)*.
    - : Refer to *[../services/dashboardService.json#/definitions/dashboardConnection](#/services/dashboardService.json#/definitions/dashboardConnection)*.
    - : Refer to *[../services/messagingService.json#/definitions/messagingConnection](#/services/messagingService.json#/definitions/messagingConnection)*.
    - : Refer to *[../services/pipelineService.json#/definitions/pipelineConnection](#/services/pipelineService.json#/definitions/pipelineConnection)*.
    - : Refer to *[../services/mlmodelService.json#/definitions/mlModelConnection](#/services/mlmodelService.json#/definitions/mlModelConnection)*.
    - : Refer to *[../services/metadataService.json#/definitions/metadataConnection](#/services/metadataService.json#/definitions/metadataConnection)*.
    - : Refer to *[../services/storageService.json#/definitions/storageConnection](#/services/storageService.json#/definitions/storageConnection)*.
- **`serviceType`**: Type of service such as Database, Dashboard, Messaging, etc. Refer to *[../services/serviceType.json](#/services/serviceType.json)*.
- **`connectionType`** *(string)*: Type of the connection to test such as Snowflake, MySQL, Looker, etc.
- **`serviceName`**: Optional value that identifies this service name. Refer to *[../../type/basic.json#/definitions/entityName](#/../type/basic.json#/definitions/entityName)*. Default: `null`.
- **`secretsManagerProvider`**: Refer to *[../../security/secrets/secretsManagerProvider.json](#/../security/secrets/secretsManagerProvider.json)*. Default: `"noop"`.


Documentation file automatically generated at 2023-07-16 19:59:36.193714.
